// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Authenticator handle / authorization code exchange 1`] = `
{
  "headers": {
    "cache-control": [
      {
        "key": "Cache-Control",
        "value": "no-cache, no-store, max-age=0, must-revalidate",
      },
    ],
    "location": [
      {
        "key": "Location",
        "value": undefined,
      },
    ],
    "pragma": [
      {
        "key": "Pragma",
        "value": "no-cache",
      },
    ],
    "set-cookie": [
      {
        "key": "Set-Cookie",
        "value": "cloudfront.accessToken=mockAccessToken; Domain=d20o2ten651kje.cloudfront.net; Path=/; Expires=Sat, 19 Oct 2024 00:00:00 GMT; Secure",
      },
      {
        "key": "Set-Cookie",
        "value": "cloudfront.idToken=mockIdToken; Domain=d20o2ten651kje.cloudfront.net; Path=/; Expires=Sat, 19 Oct 2024 00:00:00 GMT; Secure",
      },
      {
        "key": "Set-Cookie",
        "value": "cloudfront.refreshToken=mockRefreshToken; Domain=d20o2ten651kje.cloudfront.net; Path=/; Expires=Sat, 19 Oct 2024 00:00:00 GMT; Secure",
      },
    ],
  },
  "status": "302",
}
`;

exports[`Authenticator handle / forward to distribution 1`] = `
{
  "clientIp": "12.34.567.890",
  "headers": {
    "accept": [
      {
        "key": "accept",
        "value": "text/html,application/xhtml+xml,application/xml;q=0.9,image/avif,image/webp,image/apng,*/*;q=0.8",
      },
    ],
    "accept-encoding": [
      {
        "key": "accept-encoding",
        "value": "gzip, deflate, br",
      },
    ],
    "accept-language": [
      {
        "key": "accept-language",
        "value": "en-US,en;q=0.9",
      },
    ],
    "cache-control": [
      {
        "key": "cache-control",
        "value": "max-age=0",
      },
    ],
    "cookie": [
      {
        "key": "Cookie",
        "value": "cloudfront.accessToken=mockAccessToken; cloudfront.idToken=mockIdToken",
      },
    ],
    "host": [
      {
        "key": "Host",
        "value": "d20o2ten651kje.cloudfront.net",
      },
    ],
    "if-modified-since": [
      {
        "key": "if-modified-since",
        "value": "Fri, 21 Jul 2023 14:52:55 GMT",
      },
    ],
    "if-none-match": [
      {
        "key": "if-none-match",
        "value": ""fdb8756628111e736d7f6b238664ae01"",
      },
    ],
    "sec-fetch-dest": [
      {
        "key": "sec-fetch-dest",
        "value": "document",
      },
    ],
    "sec-fetch-mode": [
      {
        "key": "sec-fetch-mode",
        "value": "navigate",
      },
    ],
    "sec-fetch-site": [
      {
        "key": "sec-fetch-site",
        "value": "none",
      },
    ],
    "sec-fetch-user": [
      {
        "key": "sec-fetch-user",
        "value": "?1",
      },
    ],
    "sec-gpc": [
      {
        "key": "sec-gpc",
        "value": "1",
      },
    ],
    "upgrade-insecure-requests": [
      {
        "key": "upgrade-insecure-requests",
        "value": "1",
      },
    ],
    "user-agent": [
      {
        "key": "User-Agent",
        "value": "Mozilla/5.0 (X11; Linux x86_64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/112.0.0.0 Safari/537.36",
      },
    ],
  },
  "method": "GET",
  "querystring": "",
  "uri": "/",
}
`;

exports[`Authenticator handle / invalid accessToken 1`] = `
{
  "headers": {
    "cache-control": [
      {
        "key": "Cache-Control",
        "value": "no-cache, no-store, max-age=0, must-revalidate",
      },
    ],
    "location": [
      {
        "key": "Location",
        "value": "https://mock-cognito-domain.auth.us-east-1.amazoncognito.com/authorize?client_id=123456789qwertyuiop987abcd&redirect_uri=https://d20o2ten651kje.cloudfront.net&response_type=code&state=/",
      },
    ],
    "pragma": [
      {
        "key": "Pragma",
        "value": "no-cache",
      },
    ],
  },
  "status": "302",
}
`;

exports[`Authenticator handle / invalid idToken 1`] = `
{
  "headers": {
    "cache-control": [
      {
        "key": "Cache-Control",
        "value": "no-cache, no-store, max-age=0, must-revalidate",
      },
    ],
    "location": [
      {
        "key": "Location",
        "value": "https://mock-cognito-domain.auth.us-east-1.amazoncognito.com/authorize?client_id=123456789qwertyuiop987abcd&redirect_uri=https://d20o2ten651kje.cloudfront.net&response_type=code&state=/",
      },
    ],
    "pragma": [
      {
        "key": "Pragma",
        "value": "no-cache",
      },
    ],
  },
  "status": "302",
}
`;

exports[`Authenticator handle / missing access tokens 1`] = `
{
  "headers": {
    "cache-control": [
      {
        "key": "Cache-Control",
        "value": "no-cache, no-store, max-age=0, must-revalidate",
      },
    ],
    "location": [
      {
        "key": "Location",
        "value": "https://mock-cognito-domain.auth.us-east-1.amazoncognito.com/authorize?client_id=123456789qwertyuiop987abcd&redirect_uri=https://d20o2ten651kje.cloudfront.net&response_type=code&state=/",
      },
    ],
    "pragma": [
      {
        "key": "Pragma",
        "value": "no-cache",
      },
    ],
  },
  "status": "302",
}
`;

exports[`Authenticator handle / missing id tokens 1`] = `
{
  "headers": {
    "cache-control": [
      {
        "key": "Cache-Control",
        "value": "no-cache, no-store, max-age=0, must-revalidate",
      },
    ],
    "location": [
      {
        "key": "Location",
        "value": "https://mock-cognito-domain.auth.us-east-1.amazoncognito.com/authorize?client_id=123456789qwertyuiop987abcd&redirect_uri=https://d20o2ten651kje.cloudfront.net&response_type=code&state=/",
      },
    ],
    "pragma": [
      {
        "key": "Pragma",
        "value": "no-cache",
      },
    ],
  },
  "status": "302",
}
`;

exports[`Authenticator handle / redirect to cognito 1`] = `
{
  "headers": {
    "cache-control": [
      {
        "key": "Cache-Control",
        "value": "no-cache, no-store, max-age=0, must-revalidate",
      },
    ],
    "location": [
      {
        "key": "Location",
        "value": "https://mock-cognito-domain.auth.us-east-1.amazoncognito.com/authorize?client_id=123456789qwertyuiop987abcd&redirect_uri=https://d20o2ten651kje.cloudfront.net&response_type=code&state=/",
      },
    ],
    "pragma": [
      {
        "key": "Pragma",
        "value": "no-cache",
      },
    ],
  },
  "status": "302",
}
`;

exports[`Authenticator handle / refresh token exchange 1`] = `
{
  "headers": {
    "cache-control": [
      {
        "key": "Cache-Control",
        "value": "no-cache, no-store, max-age=0, must-revalidate",
      },
    ],
    "location": [
      {
        "key": "Location",
        "value": "/",
      },
    ],
    "pragma": [
      {
        "key": "Pragma",
        "value": "no-cache",
      },
    ],
    "set-cookie": [
      {
        "key": "Set-Cookie",
        "value": "cloudfront.accessToken=mockAccessToken; Domain=d20o2ten651kje.cloudfront.net; Path=/; Expires=Sat, 19 Oct 2024 00:00:00 GMT; Secure",
      },
      {
        "key": "Set-Cookie",
        "value": "cloudfront.idToken=mockIdToken; Domain=d20o2ten651kje.cloudfront.net; Path=/; Expires=Sat, 19 Oct 2024 00:00:00 GMT; Secure",
      },
    ],
  },
  "status": "302",
}
`;

exports[`Authenticator handle / refresh token exchange, invalid refresh token 1`] = `
{
  "headers": {
    "cache-control": [
      {
        "key": "Cache-Control",
        "value": "no-cache, no-store, max-age=0, must-revalidate",
      },
    ],
    "location": [
      {
        "key": "Location",
        "value": "https://mock-cognito-domain.auth.us-east-1.amazoncognito.com/authorize?client_id=123456789qwertyuiop987abcd&redirect_uri=https://d20o2ten651kje.cloudfront.net&response_type=code&state=/",
      },
    ],
    "pragma": [
      {
        "key": "Pragma",
        "value": "no-cache",
      },
    ],
  },
  "status": "302",
}
`;
